// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Global State Reducers are working correctly increment by negative value 1`] = `
Object {
  "count": -1,
}
`;

exports[`Redux Global State Reducers are working correctly increment by positive value 1`] = `
Object {
  "count": 1,
}
`;

exports[`Redux Global State Reducers are working correctly reset value 1`] = `
Object {
  "count": 0,
}
`;
